# pyCMF

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RULES.md  __init__.py  main.py  pbc_h1_eff.npy  pbc_h2_eff.npy  pyproject.toml  requirements.txt  test.py  test2.py
HPC/Test 1/: calc-trans-code.py  output.txt  test1.sh
HPC/Test 1/results/: Test_output_Test1_20260404_195415.txt
examples/OBDF/: Acetaldehyde.py  Cyclopropene.py  Diazomethane1.py  Diazomethane2.py  H_chain_HF_Nhan.py  H_chain_HF_excel.py  Hydrogen_chloride.py  Hydrogen_sulfide.py  Ketene.py  Ketene2.py  Methanimine.py  N2.py  Nitrosomethane.py  Nitrosomethane2.py  acetylene1.py  acetylene2.py  acetylene3.py  ammonia.py  carbon_monoxide.py  h2_downfold.py  h2_gamma.py  h2_gamma_ct copy.py  h2_gamma_ct.py  h2_gamma_table.py  h2_k_test2.py  h2_rdfold.py  h2_rdfold_ct.py  test_h_chain.py  test_h_chain_copy.py  water_df.py  water_rdf.py
examples/OBMP/: calc-trans-code.py  calc-trans-simple.py
obmp2/: dfobmp2_faster_ram.py  dfobmp2_slower.py
pycmf/: __init__.py
pycmf/obmp2/: __init__.py  dfobmp2.py  dfobmp2_faster_ram.py  dftobmp2.py  kobmp2.py  kobmp2_ksymm.py  obmp2_active.py
pycmf/uobmp2/: Hello_i_am_Khanh.py  __init__.py  dfuobmp2_faster_ram.py  dfuobmp2_mom_conv.py  thaydoi_ax_alpha_ub2plyp_dfuobmp2_diis_22825_ini.py  uobmp2.py  uobmp2_active.py  uobmp2_active_scf.py  uobmp2_dfold.py  uobmp2_faster.py
src/obmp2/: dftobmp2.py  obmp2_active.py
src/pycmf/: __init__.py
src/pycmf/KOBMP/: __init__.py  kobmp2.py
src/pycmf/OBDF/: __init__.py  dfobmp2.py  dfobmp2_slow.py  dfuobmp2.py  dfuobmp2_einsum.py  dfuobmp2_mom.py  dfuobmp2_mom_diis.py  krobdf.py  obmp2_downfold.py  uobmp2_downfold.py
src/pycmf/OBDH/: CL_embed.py  OBDH_CL_in_DFT.py  __init__.py  dft_obmp2.py  dft_uobmp2.py  example.py  example_mom_xCT.py  main.py  output.txt  stability.py  uobdh_embed.py  uobdh_solver.py
src/pycmf/OBMP/: __init__.py  dfobmp2.py  dfobmp2_slow.py  dfuobmp2.py  dfuobmp2_einsum.py  dfuobmp2_mom.py  dfuobmp2_mom_diis.py  kobmp2.py  kuobmp2.py  obmp2.py  obmp2_cas.py  obmp2_einsum.py  obmp2_slow.py  uhf_mom_diis.py  uobmp2.py  uobmp2_cas.py  uobmp2_cas_scf.py  uobmp2_downfold.py  uobmp2_mom.py  uobmp2_mom_diis.py  uobmp2_scs.py  uobmp2_slow.py
src/pycmf/obmp2/: __init__.py  dfobmp2_faster_ram.py  dfobmp2_slower.py  dftobmp2.py  kobmp2.py  obmp2.py  obmp2_active.py  obmp2_faster.py  obmp2mod.py
src/pycmf/uobmp2/: __init__.py  dftuobmp2.py  dfuobmp2_faster_ram.py  dfuobmp2_mom_conv.py  uobmp2.py  (+9 more)
src/uobmp2/: uobmp2_active_scf.py
uobmp2/: dfuobmp2_ram_reduced_new.py  uobmp2_active.py  uobmp2_dfold.py  uobmp2_mom_conv.py
(+19 files in other folders)
