[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycmf"
version = "0.1.0"
description = "Orbital-Optimized Møller-Plesset Perturbation Theory (OB-MP2) calculations"
readme = "README.md"
requires-python = ">=3.8"
license = "Proprietary"
authors = [
  {name = "QuantumLab HCMUS"}
]
dependencies = [
    "numpy",
    "scipy",
    "pyscf>=2.10.0",
    "opt_einsum>=3.4.0"
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.8",
    "pre-commit>=3.6.0"
]

[project.urls]
Homepage = "https://github.com/QuantumLab-HCMUS/pyCMF"

# Force setuptools to only scan source code in the src/ directory
[tool.setuptools.packages.find]
where = ["src"]

# ==========================================
# Configure Linter and Formatter (Replace ruff.toml, flake8, yapf)
# ==========================================
[tool.ruff]
line-length = 120
exclude = ["tests"] # Sửa thành 'tests' (có 's')

[tool.ruff.lint]
# Bỏ qua các lỗi về khoảng trắng và comment (Kế thừa từ pySCF)
ignore = [
    "E201", "E202", "E203", "E211", "E221", "E222", "E225", "E226", "E228", "E231", "E241", "E251",
    "E261", "E262", "E265", "E266",
    "E301", "E302", "E303", "E305", "E306",
    "E401", "E402",
    "E701", "E713", "E721", "E731", "E741", "E275",
    "F401", "F403", "C901", "W391"
]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "single"

# ==========================================
# Test Coverage Configuration (Replace coveragerc.txt)
# ==========================================
[tool.coverage.run]
branch = true
source = ["src/pycmf"] # Chỉ đo lường code bên trong thư mục lõi
omit = [
    "*/tests/*",     # Ignore the tests folder.
    "*_slow.py",     
    "*_old.py"      
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise RuntimeError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]
